# border-collie-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  gitignore
.github/workflows/: cli-release.yml
docs/images/: README.md
src/: main.rs
